k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aks-app-service
  namespace: prod
spec:
  type: ClusterIP      # earlier we were using Loadbalancer , the to use ingress change to ClusterIP
  selector:
    app: aks-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
