k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-app-ingress-prod
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aks-app-service
                port:
                  number: 80
